Tests/DiagnosticTests/Resources/no-ascription.silt
module Foo where

id : x -> x
id x = x --expected-error{{unexpected token 'x' (expected ':')}}
